--- a/src/deepspeed_config.json
+++ b/src/deepspeed_config.json
@@ -24,12 +24,6 @@
     "overlap_comm": true,
     "contiguous_gradients": true
   },
-  "pipeline": {
-    "enabled": true,
-    "micro_batch_size": 4,
-    "num_stages": 4,
-    "balance": [3, 3, 3, 3]
-  },
   "activation_checkpointing": {
     "partition_activations": true,
     "contiguous_memory_optimization": false,
@@ -44,5 +38,5 @@
       "warmup_num_steps": 1000
     }
   },
-  "wall_clock_breakdown": false
+  "wall_clock_breakdown": true
 }
