--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ pip-wheel-metadata/
 .ipynb_checkpoints/
 .ruff_cache/
 .cache/
+.coverage
 coverage/
 coverage.xml
 htmlcov/
@@ -55,6 +56,7 @@ lightning_logs/
 
 # Data and generated artefacts
 /checkpoint/
+/checkpoint/scaling_runs/
 /checkpoints/
 /data/
 /dataset/
