--- a/requirements.txt
+++ b/requirements.txt
@@ -1,260 +1,14 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.13.0
-aiosignal==1.4.0
-aniso8601==10.0.1
-annotated-types==0.7.0
-ansi2html==1.9.2
-antlr4-python3-runtime==4.9.3
-anyio==4.11.0
-argon2-cffi==25.1.0
-argon2-cffi-bindings==25.1.0
-arrow==1.3.0
-asttokens==3.0.0
-async-lru==2.0.5
-attrs==25.4.0
-Authlib==1.6.5
-awscli==1.42.46
-babel==2.17.0
-beautifulsoup4==4.14.2
-bleach==6.2.0
-blinker==1.9.0
-bokeh==3.8.0
-boto3==1.40.46
-botocore==1.40.46
-captum==0.8.0
-certifi==2025.10.5
-cffi==2.0.0
-charset-normalizer==3.4.3
-click==8.3.0
-cloudpickle==3.1.1
-colorama==0.4.6
-comm==0.2.3
-contourpy==1.3.3
-cryptography==46.0.2
-cycler==0.12.1
-datasets==4.2.0
-debugpy==1.8.17
-decorator==5.2.1
-deepspeed==0.18.0
-defusedxml==0.7.1
-dill==0.4.0
-docker==7.1.0
-docutils==0.19
-dparse==0.6.4
-einops==0.8.1
-entrypoints==0.4
-enum-compat==0.0.3
-executing==2.2.1
-Farama-Notifications==0.0.4
-fastapi==0.118.0
-fastjsonschema==2.21.2
-filelock==3.19.1
-Flask==3.1.2
-Flask-RESTful==0.3.10
-fonttools==4.60.1
-fqdn==1.5.1
-frozenlist==1.8.0
-fsspec==2025.9.0
-git-filter-repo==2.47.0
-google-pasta==0.2.0
-graphene==3.4.3
-graphql-core==3.2.6
-graphql-relay==3.2.0
-gymnasium==1.2.1
-h11==0.16.0
-hf-xet==1.1.10
-hjson==3.1.0
-httpcore==1.0.9
-httpx==0.28.1
-huggingface-hub==0.35.3
-idna==3.10
-imageio==2.37.0
-importlib-metadata==6.11.0
-iniconfig==2.1.0
-ipykernel==6.29.5
-ipython==9.6.0
-ipython-genutils==0.2.0
-ipython_pygments_lexers==1.1.1
-ipywidgets==8.1.7
-isoduration==20.11.0
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.6
-jmespath==1.0.1
-joblib==1.5.2
-json5==0.12.1
-jsonpointer==3.0.0
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
-jupyter-events==0.12.0
-jupyter-lsp==2.3.0
-jupyter_client==7.4.9
-jupyter_core==5.8.1
-jupyter_server==2.17.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.9
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.15
-kiwisolver==1.4.9
-lark==1.3.0
-llvmlite==0.45.1
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-marshmallow==4.0.1
-matplotlib==3.10.6
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.1.4
-mock==4.0.3
-mpi4py==4.1.1
-mpmath==1.3.0
-msgpack==1.1.2
-multidict==6.7.0
-multiprocess==0.70.16
-narwhals==2.7.0
-nbclassic==1.3.3
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.5
-ninja==1.13.0
-nltk==3.9.2
-notebook==6.5.7
-notebook_shim==0.2.4
-numba==0.62.1
-numpy==1.26.4
-nvgpu==0.10.0
-nvidia-cublas-cu12==12.9.1.4
-nvidia-cuda-cupti-cu12==12.9.79
-nvidia-cuda-nvrtc-cu12==12.9.86
-nvidia-cuda-runtime-cu12==12.9.79
-nvidia-cudnn-cu12==9.10.2.21
-nvidia-cufft-cu12==11.4.1.4
-nvidia-cufile-cu12==1.14.1.1
-nvidia-curand-cu12==10.3.10.19
-nvidia-cusolver-cu12==11.7.5.82
-nvidia-cusparse-cu12==12.5.10.65
-nvidia-cusparselt-cu12==0.7.1
-nvidia-ml-py==13.580.82
-nvidia-nccl-cu12==2.27.3
-nvidia-nvjitlink-cu12==12.9.86
-nvidia-nvtx-cu12==12.9.79
-omegaconf==2.3.0
-packaging==24.2
-pandas==2.3.3
-pandocfilters==1.5.1
-parso==0.8.5
-pathos==0.3.4
-pexpect==4.9.0
-pillow==11.3.0
-platformdirs==4.4.0
-pluggy==1.6.0
-pox==0.3.6
-ppft==1.7.7
-prettytable==3.16.0
-prometheus_client==0.23.1
-prompt_toolkit==3.0.52
-propcache==0.4.1
-protobuf==6.31.1
-psutil==7.1.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-py-cpuinfo==9.0.0
-pyarrow==21.0.0
-pyasn1==0.6.1
-pybind11==3.0.1
-pycparser==2.23
-pydantic==2.12.0
-pydantic_core==2.41.1
-pyfunctional==1.5.0
-pygame==2.6.1
-Pygments==2.19.2
-pynvml==13.0.1
-pyparsing==3.2.5
-pytest==8.4.2
-python-dateutil==2.9.0.post0
-python-json-logger==4.0.0
-pytz==2025.2
-PyYAML==6.0.3
-pyzmq==27.1.0
-referencing==0.36.2
-regex==2025.9.18
-requests==2.32.5
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rfc3987-syntax==1.1.0
-rich==14.1.0
-rpds-py==0.27.1
-rsa==4.7.2
-ruamel.yaml==0.18.15
-ruamel.yaml.clib==0.2.14
-s3fs==0.4.2
-s3transfer==0.14.0
-safetensors==0.6.2
-safety-schemas==0.0.16
-sagemaker==2.252.0
-sagemaker-core==1.0.59
-schema==0.7.7
-scikit-learn==1.7.2
-scipy==1.16.2
-seaborn==0.13.2
-Send2Trash==1.8.3
-sentencepiece==0.2.1
-setuptools==80.9.0
-shap==0.48.0
-shellingham==1.5.4
-six==1.17.0
-slicer==0.0.8
-smclarify==0.5
-smdebug-rulesconfig==1.0.1
-sniffio==1.3.1
-soupsieve==2.8
-stack-data==0.6.3
-starlette==0.48.0
-sympy==1.14.0
-tabulate==0.9.0
-tblib==3.1.0
-tenacity==9.1.2
-termcolor==3.1.0
-terminado==0.18.1
-threadpoolctl==3.6.0
-tiktoken==0.12.0
-tinycss2==1.4.0
-tokenizers==0.22.1
-tomlkit==0.13.3
-torch==2.8.0+cu129
-torch-model-archiver==0.12.0
-torch-workflow-archiver==0.2.15
-torchaudio==2.8.0+cu129
-torchserve==0.11.1
-torchtext==0.6.0
-torchvision==0.23.0+cu129
-tornado==6.5.2
-tqdm==4.67.1
-traitlets==5.14.3
-transformer_engine==2.4.0
-transformer_engine_cu12==2.4.0
-transformer_engine_torch==2.4.0
-transformers==4.57.0
-triton==3.4.0
-typer==0.19.2
-types-python-dateutil==2.9.0.20250822
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.2
-uri-template==1.3.0
-urllib3==2.5.0
-uvicorn==0.37.0
-wcwidth==0.2.14
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-Werkzeug==3.1.3
-wheel==0.45.1
-widgetsnbextension==4.0.14
-xxhash==3.6.0
-xyzservices==2025.4.0
-yarl==1.22.0
-zipp==3.23.0
+torch
+deepspeed
+transformers
+tiktoken
+numpy
+tqdm
+datasets
+requests
+matplotlib
+seaborn
+pytest
+
+# Optional (FlashAttention experiments)
+triton
