perf: tune ds buckets and disable activation ckpt

--- a/src/deepspeed_config.json
+++ b/src/deepspeed_config.json
@@ -1,6 +1,6 @@
 {
-  "train_micro_batch_size_per_gpu": 4,
-  "gradient_accumulation_steps": 4,
+  "train_micro_batch_size_per_gpu": 2,
+  "gradient_accumulation_steps": 2,
   "steps_per_print": 100,
   "optimizer": {
     "type": "AdamW",
@@ -22,10 +22,12 @@
   "zero_optimization": {
     "stage": 1,
     "overlap_comm": true,
-    "contiguous_gradients": true
+    "contiguous_gradients": true,
+    "reduce_bucket_size": 200000000,
+    "allgather_bucket_size": 200000000
   },
   "activation_checkpointing": {
-    "partition_activations": true,
+    "partition_activations": false,
     "contiguous_memory_optimization": false,
     "cpu_checkpointing": false
   },
